Fixed scrollbar jumping.

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -564,6 +564,7 @@ body {
     font-size: 18px;
     font-weight: 300;
     line-height: 28px;
+    overflow-y: scroll;
 }
 
 a {
